ecmascript/parser/tests/typescript-errors/tsc/async/es5/functionDeclarations/asyncFunctionDeclaration7_es5/input.ts.stderr
error: Unexpected token `)`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/async/es5/functionDeclarations/asyncFunctionDeclaration7_es5/input.ts:6:31
  |
6 |   async function foo(a = await): Promise<void> {
  |                               ^

